# big_h_labs

./: CMakeLists.txt  main.cpp
lib/: lab.cpp  lab.hpp  rabin_karp_search.cpp  rabin_karp_search.hpp  utils.cpp  utils.hpp
tests/rabin_karp/: test_1.txt
